--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "car rental back end",
   "main": "server.js",
   "scripts": {
-    "test": "run"
+    "test": "run",
+    "dev": "nodemon server.js"
   },
   "author": "dheerajcjustin",
   "license": "ISC",
@@ -13,8 +14,11 @@
     "cors": "^2.8.5",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
+    "joi": "^17.7.0",
+    "jsonwebtoken": "^9.0.0",
     "mongoose": "^6.8.2",
     "morgan": "^1.10.0",
+    "nodemon": "^2.0.20",
     "path": "^0.12.7"
   }
 }
