--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "morgan": "^1.10.0",
     "nodemon": "^2.0.20",
     "path": "^0.12.7",
-    "twilio": "^3.84.0"
+    "twilio": "^3.84.0",
+    "valid-objectid": "^0.0.2"
   }
 }
